--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-typed": "^2.0.12",
     "three": "^0.174.0"
   },
   "devDependencies": {
